<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_start"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:background="@drawable/fon"
    android:orientation="vertical"
    tools:context=".SecondActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:padding="30dp"
            android:scaleType="centerCrop"
            android:src="@drawable/eng_img" />

        <Button
            android:id="@+id/btnPlayGame"
            style="@style/BaseButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="30dp"
            android:layout_weight="0.8"
            android:text="@string/playGame_button"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnLK"
            style="@style/BaseButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_weight="0.8"
            android:text="@string/lk_button"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnAdd"
            style="@style/BaseButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="30dp"
            android:layout_weight="0.8"
            android:paddingBottom="10dp"
            android:text="@string/add_button"
            android:textSize="24sp" />


    </LinearLayout>

</RelativeLayout>

