<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/activity_start"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_gravity="bottom"
android:background="@color/colorBackground"
android:orientation="vertical"
tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="82dp"
            android:layout_margin="10dp"
            android:layout_weight="3"
            android:src="@drawable/welcome" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:layout_weight="1"
            android:fontFamily="@font/princess_sofia"
            android:gravity="center"
            android:padding="18dp"
            android:text="@string/welcome_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#DD628C"
            android:textSize="36sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="122dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSignIn"
                style="@style/BigButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:text="@string/signIn_button" />

            <Button
                android:id="@+id/buttonRegister"
                style="@style/BigButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:text="@string/reg_button" />

        </LinearLayout>
    </LinearLayout>


</RelativeLayout>

